# boost.actor

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  boost.actor.files  boost.actor.includes  configure  index.html
boost/actor/: abstract_actor.hpp  abstract_channel.hpp  abstract_group.hpp  accept_handle.hpp  actor.hpp  actor_addr.hpp  actor_cast.hpp  actor_companion.hpp  actor_namespace.hpp  actor_ostream.hpp  actor_proxy.hpp  all.hpp  announce.hpp  any_tuple.hpp  anything.hpp  atom.hpp  attachable.hpp  await_all_actors_done.hpp  behavior.hpp  behavior_policy.hpp  behavior_stack_based.hpp  binary_deserializer.hpp  binary_serializer.hpp  blocking_actor.hpp  channel.hpp  config.hpp  connection_handle.hpp  continue_helper.hpp  cow_ptr.hpp  cow_tuple.hpp  cppa.hpp  cppa_fwd.hpp  deserializer.hpp  duration.hpp  enable_weak_ptr.hpp  event_based_actor.hpp  exception.hpp  execution_unit.hpp  exit_reason.hpp  extend.hpp  (+71 more)
boost/actor/detail/: abstract_tuple.hpp  abstract_uniform_type_info.hpp  actor_registry.hpp  apply_args.hpp  arg_match_t.hpp  atom_val.hpp  behavior_impl.hpp  behavior_stack.hpp  boxed.hpp  call.hpp  comparable.hpp  container_tuple_view.hpp  cs_thread.hpp  decorated_tuple.hpp  default_uniform_type_info.hpp  demangle.hpp  disablable_delete.hpp  execinfo_windows.hpp  fd_util.hpp  functor_based_actor.hpp  functor_based_blocking_actor.hpp  get_mac_addresses.hpp  get_root_uuid.hpp  group_manager.hpp  handle.hpp  ieee_754.hpp  implicit_conversions.hpp  int_list.hpp  left_or_right.hpp  lifted_fun.hpp  logging.hpp  make_counted.hpp  matches.hpp  memory.hpp  message_data.hpp  message_iterator.hpp  object_array.hpp  object_impl.hpp  opt_impls.hpp  optional_variant_data.hpp  (+45 more)
boost/actor/intrusive/: single_reader_queue.hpp
boost/actor/io/: accept_handle.hpp  acceptor.hpp  broker.hpp  buffer.hpp  buffered_writing.hpp  connection_handle.hpp  continuable.hpp  default_message_queue.hpp  event.hpp  fd_util.hpp  input_stream.hpp  ipv4_acceptor.hpp  ipv4_io_stream.hpp  middleman.hpp  middleman_event_handler.hpp  output_stream.hpp  peer.hpp  peer_acceptor.hpp  platform.hpp  remote_actor_proxy.hpp  stream.hpp  tcp_acceptor.hpp  tcp_io_stream.hpp
boost/actor_io/: acceptor.hpp  all.hpp  basp.hpp  basp_broker.hpp  broker.hpp  buffer.hpp  buffered_writing.hpp  continuable.hpp  default_message_queue.hpp  event.hpp  fd_util.hpp  input_stream.hpp  max_msg_size.hpp  middleman.hpp  middleman_event_handler.hpp  network.hpp  output_stream.hpp  peer.hpp  peer_acceptor.hpp  platform.hpp  publish_local_groups.hpp  receive_policy.hpp  remote_actor.hpp  remote_actor_proxy.hpp  shutdown.hpp  spawn_io.hpp  stream.hpp  tcp_acceptor.hpp  tcp_io_stream.hpp
examples/: CMakeLists.txt  aout.cpp  hello_world.cpp
examples/curl/: curl_fuse.cpp
examples/message_passing/: calculator.cpp  dancing_kirby.cpp  dining_philosophers.cpp  typed_calculator.cpp
examples/opencl/: proper_matrix.cpp  simple_matrix.cpp
examples/remote_actors/: distributed_calculator.cpp  group_chat.cpp  group_server.cpp  protobuf_broker.cpp  simple_broker.cpp
examples/type_system/: announce_1.cpp  announce_2.cpp  announce_3.cpp  announce_4.cpp  announce_5.cpp
manual/: ActorManagement.tex  Actors.tex  Appendix.tex  BlockingAPI.tex  CommonPitfalls.tex  CopyOnWriteTuples.tex  FirstSteps.tex  GroupCommunication.tex  Introduction.tex  NetworkIO.tex  PatternMatching.tex  ReceivingMessages.tex  SendingMessages.tex  StronglyTypedActors.tex  SynchronousMessages.tex  TypeSystem.tex  index.html  manual.tex
scripts/: update_gh-pages.sh
src/: abstract_actor.cpp  abstract_channel.cpp  abstract_group.cpp  abstract_tuple.cpp  acceptor.cpp  actor.cpp  actor_addr.cpp  actor_companion.cpp  actor_namespace.cpp  actor_ostream.cpp  actor_proxy.cpp  actor_registry.cpp  algorithm.cpp  any_tuple.cpp  atom.cpp  attachable.cpp  behavior.cpp  behavior_stack.cpp  binary_deserializer.cpp  binary_serializer.cpp  blocking_actor.cpp  broker.cpp  buffer.cpp  channel.cpp  context_switching_resume.cpp  continuable.cpp  continue_helper.cpp  cs_thread.cpp  decorated_tuple.cpp  default_message_queue.cpp  demangle.cpp  deserializer.cpp  duration.cpp  event_based_actor.cpp  exception.cpp  execinfo_windows.cpp  execution_unit.cpp  exit_reason.cpp  factory.cpp  fd_util.cpp  (+55 more)
src/actor/: CMakeLists.txt  abstract_actor.cpp  abstract_channel.cpp  abstract_group.cpp  abstract_tuple.cpp  actor.cpp  actor_addr.cpp  actor_namespace.cpp  actor_ostream.cpp  actor_proxy.cpp  actor_registry.cpp  atom.cpp  attachable.cpp  behavior.cpp  behavior_stack.cpp  binary_deserializer.cpp  binary_serializer.cpp  blocking_actor.cpp  channel.cpp  context_switching_resume.cpp  continue_helper.cpp  cs_thread.cpp  decorated_tuple.cpp  demangle.cpp  deserializer.cpp  duration.cpp  event_based_actor.cpp  exception.cpp  execution_unit.cpp  exit_reason.cpp  functor_based_actor.cpp  functor_based_blocking_actor.cpp  get_mac_addresses.cpp  get_root_uuid.cpp  group.cpp  group_manager.cpp  local_actor.cpp  logging.cpp  mailbox_element.cpp  max_msg_size.cpp  (+24 more)
src/actor_io/: CMakeLists.txt  acceptor.cpp  basp_broker.cpp  broker.cpp  buffer.cpp  continuable.cpp  default_message_queue.cpp  execinfo_windows.cpp  fd_util.cpp  input_stream.cpp  middleman.cpp  middleman_event_handler.cpp  middleman_event_handler_epoll.cpp  middleman_event_handler_poll.cpp  network.cpp  output_stream.cpp  peer.cpp  peer_acceptor.cpp  publish_local_groups.cpp  remote_actor_proxy.cpp  stream.cpp  tcp_acceptor.cpp  tcp_io_stream.cpp  unicast_network.cpp
unit_testing/: CMakeLists.txt  ping_pong.cpp  ping_pong.hpp  test.cpp  test.hpp  test_atom.cpp  test_broker.cpp  test_fixed_vector.cpp  test_intrusive_containers.cpp  test_intrusive_ptr.cpp  test_local_group.cpp  test_match.cpp  test_match_expr.cpp  test_metaprogramming.cpp  test_one_shot_remote_actor.cpp  test_optional_variant.cpp  test_primitive_variant.cpp  test_remote_actor.cpp  test_ripemd_160.cpp  test_serialization.cpp  test_spawn.cpp  test_sync_send.cpp  test_tuple.cpp  test_typed_remote_actor.cpp  test_typed_spawn.cpp  test_uniform_type.cpp  test_yield_interface.cpp
(+54 files in other folders)
